Change defaults to match my case

--- a/src/etc/dovecot/conf.d/10-mail.conf
+++ b/src/etc/dovecot/conf.d/10-mail.conf
@@ -138,7 +138,7 @@ mail_privileged_group = vmail # default:
 
 # Indicates a method for contacting the server administrator. According to
 # RFC 5464, this value MUST be a URI (e.g., a mailto: or tel: URL), but that
-# is currently not enforced. Use for example mailto:admin@example.com. This
+# is currently not enforced. Use for example mailto:admin@growtharchitect.fi. This
 # value is accessible for authenticated users through the IMAP METADATA server
 # entry "/shared/admin".
 #mail_server_admin = 
