--- a/src/etc/dovecot/conf.d/10-ssl.conf
+++ b/src/etc/dovecot/conf.d/10-ssl.conf
@@ -11,8 +11,8 @@ ssl = required # default: yes
 # certificate, just make sure to update the domains in dovecot-openssl.cnf
 #ssl_cert = </etc/ssl/dovecotcert.pem
 #ssl_key = </etc/ssl/private/dovecot.pem
-ssl_cert = </etc/ssl/acme/mercury.example.com.fullchain.pem
-ssl_key = </etc/ssl/acme/private/mercury.example.com.key
+ssl_cert = </etc/ssl/acme/mail1.growtharchitect.fi.fullchain.pem
+ssl_key = </etc/ssl/acme/private/mail1.growtharchitect.fi.key
 
 # If key file is password protected, give the password here. Alternatively
 # give it when starting dovecot with -p parameter. Since this file is often
