--- a/src/etc/dovecot/conf.d/90-replication.conf
+++ b/src/etc/dovecot/conf.d/90-replication.conf
@@ -14,7 +14,7 @@ service replicator {
 # Configure how and where to replicate
 dsync_remote_cmd = ssh -i/home/dsync/.ssh/id_rsa -l%{login} %{host} doveadm dsync-server -u%u
 plugin {
-  mail_replica = remote:dsync@hermes.example.com
+  mail_replica = remote:dsync@mail2.growtharchitect.fi
 
   # When saving a new mail via IMAP or delivering a mail via LDA/LMTP,
   # wait for the mail to be synced to the remote site. If it doesn't finish
