--- a/src/etc/httpd.conf
+++ b/src/etc/httpd.conf
@@ -18,7 +18,7 @@ prefork 1
 #
 
 # Host:443
-server "mercury.example.com" {
+server "mail1.growtharchitect.fi" {
 	alias "autoconfig.*"
 	alias "wkd.*"
 
@@ -27,10 +27,10 @@ server "mercury.example.com" {
 
 	hsts subdomains
 
-	tls certificate "/etc/ssl/acme/mercury.example.com.fullchain.pem"
-	tls key "/etc/ssl/acme/private/mercury.example.com.key"
+	tls certificate "/etc/ssl/acme/mail1.growtharchitect.fi.fullchain.pem"
+	tls key "/etc/ssl/acme/private/mail1.growtharchitect.fi.key"
 	# (!) see usr/local/bin/get-ocsp.sh
-	tls ocsp "/etc/ssl/acme/mercury.example.com.ocsp.resp.der"
+	tls ocsp "/etc/ssl/acme/mail1.growtharchitect.fi.ocsp.resp.der"
 
 	# Cipher Strength <https://man.openbsd.org/SSL_CTX_set_cipher_list>
 	tls ciphers "HIGH:!AES128:!kRSA:!aNULL" # default: "HIGH:!aNULL"
@@ -52,13 +52,13 @@ server "mercury.example.com" {
 	}
 
 	location "/*" {
-		root "/htdocs/mercury.example.com"
+		root "/htdocs/mail1.growtharchitect.fi"
 		pass
 	}
 }
 
 # Host:80
-server "mercury.example.com" {
+server "mail1.growtharchitect.fi" {
 	alias "autoconfig.*"
 	alias "wkd.*"
 
@@ -80,11 +80,11 @@ server "mercury.example.com" {
 
 	# Mozilla Autoconfiguration
 	location "/mail/*" {
-		block return 302 "https://autoconfig.example.com$REQUEST_URI"
+		block return 302 "https://autoconfig.growtharchitect.fi$REQUEST_URI"
 	}
 
 	location "/*" {
-		root "/htdocs/mercury.example.com"
+		root "/htdocs/mail1.growtharchitect.fi"
 		pass
 	}
 }
