--- a/src/etc/mail/smtpd.conf
+++ b/src/etc/mail/smtpd.conf
@@ -13,8 +13,8 @@ max-message-size 35M # (!) match "quota_max_mail_size" from 90-quota.conf
 
 # PKI
 #
-pki mercury.example.com certificate	"/etc/ssl/acme/mercury.example.com.fullchain.pem"
-pki mercury.example.com key		"/etc/ssl/acme/private/mercury.example.com.key"
+pki mail1.growtharchitect.fi certificate	"/etc/ssl/acme/mail1.growtharchitect.fi.fullchain.pem"
+pki mail1.growtharchitect.fi key		"/etc/ssl/acme/private/mail1.growtharchitect.fi.key"
 
 # Tables
 # https://man.openbsd.org/table.5
@@ -26,8 +26,8 @@ table virtuals			file:/etc/mail/virtual      # virtual host aliases
 table vdomains			file:/etc/mail/vdomains     # virtual domains
 table passwd			passwd:/etc/mail/passwd     # virtual passwords
 table blacklist-senders		file:/etc/mail/blacklist    # sender's email or entire @example.bad list
-table localhost-senders		{ "@mercury.example.com" }  # sender's entire @mailname (or local hostname)
-table wks-recipients		{ "key-submission@example.com" } # OpenPGP WKS Submission Address
+table localhost-senders		{ "@mail1.growtharchitect.fi" }  # sender's entire @mailname (or local hostname)
+table wks-recipients		{ "key-submission@growtharchitect.fi" } # OpenPGP WKS Submission Address
 # IP addresses of relays that may legitimately originate mail with your domain(s) as the sender
 table whitelist-relays		file:/etc/mail/relays       # source IP list
 table whitelist-senders		file:/etc/mail/whitelist    # sender's email or entire @vdomains
@@ -45,13 +45,13 @@ listen on lo0 port 10028 \
 #
 # External messages (optional STARTTLS)
 listen on egress port smtp \
-  tls pki mercury.example.com \
+  tls pki mail1.growtharchitect.fi \
   tag MTA # no-dsn
 #
 # Message submission agent requires STARTTLS and authentication
 # (!) auth = filter rules using "from local" will match messages henceforth named local
 listen on egress port submission \
-  tls-require pki mercury.example.com \
+  tls-require pki mail1.growtharchitect.fi \
   auth <passwd> mask-source \
   tag MSA
 
@@ -67,7 +67,7 @@ accept from local \
 # (!) STARTTLS is always attempted if available on the remote host
 accept tagged DKIM \
   for any \
-  relay # source $wan_ip hostname mercury.example.com
+  relay # source $wan_ip hostname mail1.growtharchitect.fi
 #
 # Local messages for virtual domains are not DKIM signed, nor rspamd scanned
 accept from local \
