--- a/src/etc/pf.conf
+++ b/src/etc/pf.conf
@@ -95,13 +95,13 @@ anchor "external" on egress {
   # WWW
   pass log (user) proto tcp \
    to port { http https } \
-   user { _ntp _pfetch _pkgfetch _relayd _syspatch _rspamd root puffy } \
+   user { _ntp _pfetch _pkgfetch _relayd _syspatch _rspamd root janitor } \
    tag SELF_INET
 
   # SSH, WHOIS
   pass log (user) proto tcp \
    to port { ssh whois } \
-   user { root puffy dsync } \
+   user { root janitor dsync } \
    tag SELF_INET
 
   # MTA (!) "log" for spamlogd
