--- a/src/etc/acme-client.conf
+++ b/src/etc/acme-client.conf
@@ -12,14 +12,14 @@ authority letsencrypt-staging {
 }
 
 # (!) Add every service (virtual) subdomains as alternative names
-domain mercury.example.com {
+domain mail1.growtharchitect.fi {
 	alternative names { \
-		autoconfig.example.com \
-		autoconfig.example.net \
-		wkd.example.com \
-		wkd.example.net }
-	domain key "/etc/ssl/acme/private/mercury.example.com.key"
-	domain certificate "/etc/ssl/acme/mercury.example.com.crt"
-	domain full chain certificate "/etc/ssl/acme/mercury.example.com.fullchain.pem"
+		autoconfig.growtharchitect.fi \
+		autoconfig.websink.fi \
+		wkd.growtharchitect.fi \
+		wkd.websink.fi }
+	domain key "/etc/ssl/acme/private/mail1.growtharchitect.fi.key"
+	domain certificate "/etc/ssl/acme/mail1.growtharchitect.fi.crt"
+	domain full chain certificate "/etc/ssl/acme/mail1.growtharchitect.fi.fullchain.pem"
 	sign with letsencrypt
 }
