--- a/src/etc/dhclient.conf
+++ b/src/etc/dhclient.conf
@@ -6,8 +6,8 @@
 
 interface "vio0"
  {
-  send host-name "mercury";
-  supersede host-name "mercury";
+  send host-name "mail1";
+  supersede host-name "mail1";
   # rebound for unbound
   ignore domain-name;
   ignore domain-name-servers;
