--- a/src/etc/dkimproxy_out.conf
+++ b/src/etc/dkimproxy_out.conf
@@ -5,7 +5,7 @@ listen    127.0.0.1:10027
 relay     localhost:10028
 
 # specify what domains DKIMproxy can sign for (comma-separated, no spaces)
-domain    example.com,example.net
+domain    growtharchitect.fi,websink.fi
 
 # specify what signatures to add
 signature dkim(c=relaxed,a=rsa-sha256)
