--- a/src/var/www/htdocs/mail1.growtharchitect.fi/install.conf
+++ b/src/var/www/htdocs/mail1.growtharchitect.fi/install.conf
@@ -1,25 +1,25 @@
 # autoinstall response file for unattended installation
 # https://man.openbsd.org/autoinstall
 Choose your keyboard layout = default
-System hostname = mercury
+System hostname = mail1
 Which network interface do you wish to configure = vio0
 IPv4 address for vio0 = dhcp
 IPv6 address for vio0 = autoconf
 Which network interface do you wish to configure = done
 Default IPv4 route = 
-DNS domain name = example.com
+DNS domain name = growtharchitect.fi
 Password for root account = plaintext / encrypt(1) / "*************" to disable
 #Public ssh key for root account = ssh key stored in /root/.ssh/authorized_keys
 Start sshd(8) by default = yes
 Do you expect to run the X Window System = no
-Setup a user = puffy
+Setup a user = janitor
 Full name for user = Puffy
 Password for user = plaintext / encrypt(1) / "*************" to disable
 #Public ssh key for user = ssh key stored in ~/.ssh/authorized_keys
 Allow root ssh login = no
 What timezone are you in = America/New_York
 Which disk is the root disk = sd0
-URL to autopartitioning template for disklabel = https://raw.githubusercontent.com/vedetta-com/caesonia/master/src/var/www/htdocs/mercury.example.com/disklabel.min
+URL to autopartitioning template for disklabel = https://raw.githubusercontent.com/vedetta-com/caesonia/master/src/var/www/htdocs/mail1.growtharchitect.fi/disklabel.min
 Location of sets = http 
 HTTP proxy URL = none
 HTTP Server = fastly.cdn.openbsd.org
